--- a/arch/arm64/configs/celicia-rec-m31_defconfig
+++ b/arch/arm64/configs/celicia-rec-m31_defconfig
@@ -5639,7 +5639,7 @@ CONFIG_CRYPTO=y
 #
 # Crypto core or helper
 #
-CONFIG_CRYPTO_FIPS=y
+# CONFIG_CRYPTO_FIPS is not set
 CONFIG_CRYPTO_ALGAPI=y
 CONFIG_CRYPTO_ALGAPI2=y
 CONFIG_CRYPTO_AEAD=y
@@ -5786,9 +5786,7 @@ CONFIG_CRYPTO_HW=y
 # CONFIG_CRYPTO_DEV_S5P is not set
 # CONFIG_CRYPTO_DEV_CCP is not set
 CONFIG_EXYNOS_FMP=y
-CONFIG_EXYNOS_FMP_FIPS=y
-CONFIG_NODE_FOR_SELFTEST_FAIL=y
-# CONFIG_PANIC_FOR_SELFTEST_FAIL is not set
+# CONFIG_EXYNOS_FMP_FIPS is not set
 CONFIG_ASYMMETRIC_KEY_TYPE=y
 CONFIG_ASYMMETRIC_PUBLIC_KEY_SUBTYPE=y
 # CONFIG_X509_CERTIFICATE_PARSER is not set
