arm64 : configs : celicia-rec-a51_defconfig : Disable samsung knox/security related features

--- a/arch/arm64/configs/celicia-rec-a51_defconfig
+++ b/arch/arm64/configs/celicia-rec-a51_defconfig
@@ -589,14 +589,15 @@ CONFIG_RANDOMIZE_MODULE_REGION_FULL=y
 CONFIG_CMDLINE=""
 # CONFIG_EFI is not set
 # CONFIG_BUILD_ARM64_APPENDED_DTB_IMAGE is not set
-CONFIG_UH=y
+# CONFIG_UH is not set
 # CONFIG_UH_DEBUG is not set
-CONFIG_UH_RKP=y
-CONFIG_RKP_KDP=y
-CONFIG_RKP_NS_PROT=y
-CONFIG_RKP_DMAP_PROT=y
-CONFIG_UH_RKP_FIMC_CHECK=y
-CONFIG_UH_LKM_BLOCK=y
+# CONFIG_UH_RKP is not set
+# CONFIG_RKP_KDP is not set
+# CONFIG_RKP_NS_PROT is not set
+# CONFIG_RKP_NS_PROT_ROS is not set
+# CONFIG_RKP_DMAP_PROT is not set
+# CONFIG_UH_RKP_FIMC_CHECK is not set
+# CONFIG_UH_LKM_BLOCK is not set
 
 #
 # Userspace binary formats
@@ -761,8 +762,8 @@ CONFIG_INET_DIAG_DESTROY=y
 CONFIG_TCP_CONG_ADVANCED=y
 CONFIG_TCP_CONG_BIC=y
 CONFIG_TCP_CONG_CUBIC=y
-CONFIG_TCP_CONG_WESTWOOD=m
-CONFIG_TCP_CONG_HTCP=m
+# CONFIG_TCP_CONG_WESTWOOD is not set
+# CONFIG_TCP_CONG_HTCP is not set
 # CONFIG_TCP_CONG_HSTCP is not set
 # CONFIG_TCP_CONG_HYBLA is not set
 # CONFIG_TCP_CONG_VEGAS is not set
@@ -1130,7 +1131,7 @@ CONFIG_NET_SCH_FIFO=y
 # CONFIG_NET_SWITCHDEV is not set
 # CONFIG_NET_L3_MASTER_DEV is not set
 # CONFIG_NET_NCSI is not set
-CONFIG_KNOX_NCM=y
+# CONFIG_KNOX_NCM is not set
 CONFIG_RPS=y
 CONFIG_RFS_ACCEL=y
 CONFIG_XPS=y
@@ -1593,7 +1594,7 @@ CONFIG_DM_CRYPT=y
 # CONFIG_DM_DELAY is not set
 CONFIG_DM_UEVENT=y
 # CONFIG_DM_FLAKEY is not set
-CONFIG_DM_VERITY=y
+# CONFIG_DM_VERITY is not set
 CONFIG_DM_VERITY_FEC=y
 # CONFIG_DM_SWITCH is not set
 # CONFIG_DM_LOG_WRITES is not set
@@ -4473,7 +4474,7 @@ CONFIG_PC_ITERATION=5
 CONFIG_EXYNOS_DVFS_MANAGER=y
 CONFIG_EXYNOS_PD=y
 CONFIG_EXYNOS_SECURE_LOG=y
-CONFIG_EXYNOS_KERNEL_PROTECTION=y
+# CONFIG_EXYNOS_KERNEL_PROTECTION is not set
 CONFIG_EXYNOS_SDM=y
 CONFIG_USI_V2=y
 CONFIG_EXYNOS_SMC_LOG_THRESHOLD=0
@@ -5126,7 +5127,7 @@ CONFIG_SPU_VERIFY=y
 #
 # samsung Performace manager
 #
-CONFIG_KPERFMON=y
+# CONFIG_KPERFMON is not set
 
 #
 # Firmware Drivers
@@ -5652,10 +5653,10 @@ CONFIG_MST_TEEGRIS=y
 # CONFIG_MFC_LDO_COMMAND is not set
 # CONFIG_MST_LPM_DISABLE is not set
 # CONFIG_MST_LPM_CONTROL is not set
-CONFIG_INTEGRITY=y
-CONFIG_INTEGRITY_SIGNATURE=y
-CONFIG_INTEGRITY_ASYMMETRIC_KEYS=y
-CONFIG_INTEGRITY_AUDIT=y
+# CONFIG_INTEGRITY is not set
+# CONFIG_INTEGRITY_SIGNATURE is not set
+# CONFIG_INTEGRITY_ASYMMETRIC_KEYS is not set
+# CONFIG_INTEGRITY_AUDIT is not set
 # CONFIG_IMA is not set
 # CONFIG_EVM is not set
 CONFIG_FIVE=n
@@ -5667,15 +5668,15 @@ CONFIG_FIVE_DEFAULT_HASH_SHA1=y
 # CONFIG_FIVE_DEFAULT_HASH_SHA256 is not set
 # CONFIG_FIVE_DEFAULT_HASH_SHA512 is not set
 CONFIG_FIVE_DEFAULT_HASH="sha1"
-CONFIG_PROCA=y
+# CONFIG_PROCA is not set
 # CONFIG_PROCA_GKI_10 is not set
-CONFIG_PROCA_S_OS=y
+# CONFIG_PROCA_S_OS is not set
 CONFIG_GAF=y
 # CONFIG_GAF_V3 is not set
 # CONFIG_GAF_V4 is not set
 # CONFIG_GAF_V5 is not set
 CONFIG_GAF_V6=y
-CONFIG_SECURITY_DSMS=y
+# CONFIG_SECURITY_DSMS is not set
 CONFIG_DEFAULT_SECURITY_SELINUX=y
 # CONFIG_DEFAULT_SECURITY_DAC is not set
 CONFIG_DEFAULT_SECURITY="selinux"
