--- a/arch/arm64/configs/celicia-rec-m31_defconfig
+++ b/arch/arm64/configs/celicia-rec-m31_defconfig
@@ -746,8 +746,8 @@ CONFIG_INET_DIAG_DESTROY=y
 CONFIG_TCP_CONG_ADVANCED=y
 CONFIG_TCP_CONG_BIC=y
 CONFIG_TCP_CONG_CUBIC=y
-CONFIG_TCP_CONG_WESTWOOD=m
-CONFIG_TCP_CONG_HTCP=m
+# CONFIG_TCP_CONG_WESTWOOD is not set
+# CONFIG_TCP_CONG_HTCP is not set
 # CONFIG_TCP_CONG_HSTCP is not set
 # CONFIG_TCP_CONG_HYBLA is not set
 # CONFIG_TCP_CONG_VEGAS is not set
@@ -1115,7 +1115,7 @@ CONFIG_NET_SCH_FIFO=y
 # CONFIG_NET_SWITCHDEV is not set
 # CONFIG_NET_L3_MASTER_DEV is not set
 # CONFIG_NET_NCSI is not set
-CONFIG_KNOX_NCM=y
+# CONFIG_KNOX_NCM is not set
 CONFIG_RPS=y
 CONFIG_RFS_ACCEL=y
 CONFIG_XPS=y
@@ -1581,7 +1581,7 @@ CONFIG_DM_CRYPT=y
 # CONFIG_DM_DELAY is not set
 CONFIG_DM_UEVENT=y
 # CONFIG_DM_FLAKEY is not set
-CONFIG_DM_VERITY=y
+# CONFIG_DM_VERITY is not set
 CONFIG_DM_VERITY_FEC=y
 # CONFIG_DM_SWITCH is not set
 # CONFIG_DM_LOG_WRITES is not set
@@ -4425,7 +4425,7 @@ CONFIG_PC_ITERATION=5
 CONFIG_EXYNOS_DVFS_MANAGER=y
 CONFIG_EXYNOS_PD=y
 CONFIG_EXYNOS_SECURE_LOG=y
-CONFIG_EXYNOS_KERNEL_PROTECTION=y
+# CONFIG_EXYNOS_KERNEL_PROTECTION is not set
 CONFIG_EXYNOS_SDM=y
 CONFIG_USI_V2=y
 CONFIG_EXYNOS_SMC_LOG_THRESHOLD=0
@@ -5098,7 +5098,7 @@ CONFIG_SPU_VERIFY=y
 #
 # samsung Performace manager
 #
-CONFIG_KPERFMON=y
+# CONFIG_KPERFMON is not set
 
 #
 # Firmware Drivers
@@ -5622,14 +5622,14 @@ CONFIG_SECURITY_SELINUX_CHECKREQPROT_VALUE=0
 # CONFIG_MFC_LDO_COMMAND is not set
 # CONFIG_MST_LPM_DISABLE is not set
 # CONFIG_MST_LPM_CONTROL is not set
-CONFIG_INTEGRITY=y
+# CONFIG_INTEGRITY is not set
 # CONFIG_INTEGRITY_SIGNATURE is not set
-CONFIG_INTEGRITY_AUDIT=y
+# CONFIG_INTEGRITY_AUDIT is not set
 # CONFIG_IMA is not set
 # CONFIG_EVM is not set
 # CONFIG_FIVE is not set
 # CONFIG_GAF is not set
-CONFIG_SECURITY_DSMS=y
+# CONFIG_SECURITY_DSMS is not set
 # CONFIG_SECURITY_DEFEX is not set
 CONFIG_DEFAULT_SECURITY_SELINUX=y
 # CONFIG_DEFAULT_SECURITY_DAC is not set
