arm64 : Import m21 dtb/dtbo from M215FXXS2BUK2 kernel source

--- a/arch/arm64/boot/dts/Makefile
+++ b/arch/arm64/boot/dts/Makefile
@@ -1,9 +1,15 @@
 # SPDX-License-Identifier: GPL-2.0
-dtb-y += exynos/exynos9610.dtb
-dtbo-y += samsung/exynos9611-a51_eur_open_01.dtbo
-dtbo-y += samsung/exynos9611-a51_eur_open_00.dtbo
-dtbo-y += samsung/exynos9611-a51_eur_open_03.dtbo
-dtbo-y += samsung/exynos9611-a51_eur_open_07.dtbo
+dtb-$(CONFIG_SOC_EXYNOS9610) += exynos/exynos9610.dtb
+
+dtbo-$(CONFIG_DTBO_A51) += \
+        samsung/exynos9611-a51_eur_open_01.dtbo \
+        samsung/exynos9611-a51_eur_open_00.dtbo \
+        samsung/exynos9611-a51_eur_open_03.dtbo \
+        samsung/exynos9611-a51_eur_open_07.dtbo
+
+dtbo-$(CONFIG_DTBO_M21) += \
+        samsung/exynos9611-m21_swa_open_00.dtbo \
+        samsung/exynos9611-m21_swa_open_06.dtbo
 
 targets += dtbs
 DTB_LIST  := $(dtb-y) $(dtbo-y)
