--- a/arch/arm64/configs/celicia-rec-a51_defconfig
+++ b/arch/arm64/configs/celicia-rec-a51_defconfig
@@ -422,6 +422,12 @@ CONFIG_SOC_EXYNOS9610=y
 CONFIG_ARCH_EXYNOS9=y
 
 #
+# Dtbo
+#
+CONFIG_DTBO_A51=y
+# CONFIG_DTBO_M21 is not set
+
+#
 # Bus support
 #
 # CONFIG_PCI is not set
