--- a/arch/arm64/boot/dts/Makefile
+++ b/arch/arm64/boot/dts/Makefile
@@ -11,6 +11,9 @@ dtbo-$(CONFIG_DTBO_M21) += \
         samsung/exynos9611-m21_swa_open_00.dtbo \
         samsung/exynos9611-m21_swa_open_06.dtbo
 
+dtbo-$(CONFIG_DTBO_M31S) += \
+        samsung/exynos9611-m31s_eur_open_00.dtbo
+
 targets += dtbs
 DTB_LIST  := $(dtb-y) $(dtbo-y)
 always    := $(DTB_LIST)
@@ -18,3 +21,4 @@ always    := $(DTB_LIST)
 dtbs: $(addprefix $(obj)/, $(DTB_LIST))
 
 clean-files := *.dtb*
+
