arm64 : celicia* : Regenerate defconfigs

--- a/arch/arm64/configs/celicia-a51_defconfig
+++ b/arch/arm64/configs/celicia-a51_defconfig
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Linux/arm64 4.14.113 Kernel Configuration
+# Linux/arm64 4.14.160 Kernel Configuration
 #
 CONFIG_ARM64=y
 CONFIG_64BIT=y
@@ -46,8 +46,8 @@ CONFIG_THREAD_INFO_IN_TASK=y
 CONFIG_INIT_ENV_ARG_LIMIT=32
 CONFIG_CROSS_COMPILE=""
 # CONFIG_COMPILE_TEST is not set
-CONFIG_LOCALVERSION="-Celicia-v2.0.0"
-# CONFIG_LOCALVERSION_AUTO=y is not set
+CONFIG_LOCALVERSION="-Celicia-v2.1.0"
+# CONFIG_LOCALVERSION_AUTO is not set
 CONFIG_DEFAULT_HOSTNAME="(none)"
 CONFIG_SWAP=y
 # CONFIG_SYSVIPC is not set
@@ -420,10 +420,6 @@ CONFIG_ARCH_EXYNOS=y
 #
 CONFIG_SOC_EXYNOS9610=y
 CONFIG_ARCH_EXYNOS9=y
-
-#
-# Dtbo
-#
 CONFIG_DTBO_A51=y
 # CONFIG_DTBO_M21 is not set
 # CONFIG_DTBO_M31S is not set
@@ -595,12 +591,6 @@ CONFIG_CMDLINE=""
 # CONFIG_EFI is not set
 # CONFIG_BUILD_ARM64_APPENDED_DTB_IMAGE is not set
 # CONFIG_UH is not set
-# CONFIG_UH_DEBUG is not set
-# CONFIG_UH_RKP is not set
-# CONFIG_RKP_KDP is not set
-# CONFIG_RKP_NS_PROT is not set
-# CONFIG_RKP_DMAP_PROT is not set
-# CONFIG_UH_RKP_FIMC_CHECK is not set
 # CONFIG_UH_LKM_BLOCK is not set
 
 #
@@ -3781,7 +3771,6 @@ CONFIG_USB_SERIAL_PL2303=y
 # CONFIG_USB_EMI26 is not set
 # CONFIG_USB_ADUTUX is not set
 # CONFIG_USB_SEVSEG is not set
-# CONFIG_USB_RIO500 is not set
 # CONFIG_USB_LEGOTOWER is not set
 # CONFIG_USB_LCD is not set
 # CONFIG_USB_CYPRESS_CY7C63 is not set
@@ -4340,10 +4329,6 @@ CONFIG_SEC_ABC_HUB_BOOTC=y
 # Samsung ABC Hub Booting Time Check eng mode Options
 #
 # CONFIG_SEC_ABC_HUB_BOOTC_ENG is not set
-
-#
-# Samsung LABO Options
-#
 # CONFIG_GOLDFISH is not set
 # CONFIG_CHROME_PLATFORMS is not set
 CONFIG_CLKDEV_LOOKUP=y
@@ -5125,12 +5110,10 @@ CONFIG_DC_VIBRATOR=y
 CONFIG_SENSORS_FINGERPRINT=y
 # CONFIG_SENSORS_ET5XX is not set
 CONFIG_SENSORS_ET7XX=y
+CONFIG_TZIC=y
+CONFIG_TZIC_USE_TZDEV=y
+# CONFIG_TZIC_DEFAULT is not set
 CONFIG_SPU_VERIFY=y
-
-#
-# samsung Performace manager
-#
-# CONFIG_KPERFMON is not set
 
 #
 # Firmware Drivers
@@ -5636,9 +5619,9 @@ CONFIG_HARDENED_USERCOPY=y
 CONFIG_SECURITY_SELINUX=y
 # CONFIG_SECURITY_SELINUX_BOOTPARAM is not set
 # CONFIG_SECURITY_SELINUX_DISABLE is not set
+CONFIG_SECURITY_SELINUX_DEVELOP=y
 # CONFIG_SECURITY_SELINUX_ALWAYS_ENFORCING is not set
 # CONFIG_SECURITY_SELINUX_ALWAYS_PERMISSIVE is not set
-CONFIG_SECURITY_SELINUX_DEVELOP=y
 CONFIG_SECURITY_SELINUX_AVC_STATS=y
 CONFIG_SECURITY_SELINUX_CHECKREQPROT_VALUE=0
 # CONFIG_SECURITY_SMACK is not set
@@ -5657,17 +5640,6 @@ CONFIG_MST_TEEGRIS=y
 # CONFIG_MST_LPM_DISABLE is not set
 # CONFIG_MST_LPM_CONTROL is not set
 # CONFIG_INTEGRITY is not set
-# CONFIG_INTEGRITY_SIGNATURE is not set
-# CONFIG_INTEGRITY_ASYMMETRIC_KEYS is not set
-# CONFIG_INTEGRITY_AUDIT is not set
-# CONFIG_IMA is not set
-# CONFIG_EVM is not set
-# CONFIG_FIVE is not set
-# CONFIG_FIVE_GKI_10 is not set
-# CONFIG_FIVE_GKI_20 is not set
-# CONFIG_PROCA_GKI_10 is not set
-# CONFIG_PROCA is not set
-# CONFIG_PROCA_S_OS is not set
 CONFIG_GAF=y
 # CONFIG_GAF_V3 is not set
 # CONFIG_GAF_V4 is not set
@@ -5921,6 +5893,7 @@ CONFIG_TEXTSEARCH_FSM=y
 CONFIG_ASSOCIATIVE_ARRAY=y
 CONFIG_HAS_IOMEM=y
 CONFIG_HAS_DMA=y
+# CONFIG_SGL_ALLOC is not set
 # CONFIG_DMA_NOOP_OPS is not set
 # CONFIG_DMA_VIRT_OPS is not set
 CONFIG_CPU_RMAP=y
@@ -5933,7 +5906,6 @@ CONFIG_CLZ_TAB=y
 # CONFIG_DDR is not set
 # CONFIG_IRQ_POLL is not set
 CONFIG_MPILIB=y
-CONFIG_SIGNATURE=y
 CONFIG_LIBFDT=y
 CONFIG_OID_REGISTRY=y
 # CONFIG_SG_SPLIT is not set
