--- a/arch/arm64/configs/celicia-m31s_defconfig
+++ b/arch/arm64/configs/celicia-m31s_defconfig
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Linux/arm64 4.14.113 Kernel Configuration
+# Linux/arm64 4.14.160 Kernel Configuration
 #
 CONFIG_ARM64=y
 CONFIG_64BIT=y
@@ -46,7 +46,7 @@ CONFIG_THREAD_INFO_IN_TASK=y
 CONFIG_INIT_ENV_ARG_LIMIT=32
 CONFIG_CROSS_COMPILE=""
 # CONFIG_COMPILE_TEST is not set
-CONFIG_LOCALVERSION="-Celicia-v2.0.0"
+CONFIG_LOCALVERSION="-Celicia-v2.1.0"
 # CONFIG_LOCALVERSION_AUTO is not set
 CONFIG_DEFAULT_HOSTNAME="(none)"
 CONFIG_SWAP=y
@@ -419,10 +419,6 @@ CONFIG_ARCH_EXYNOS=y
 #
 CONFIG_SOC_EXYNOS9610=y
 CONFIG_ARCH_EXYNOS9=y
-
-#
-# Dtbo
-#
 # CONFIG_DTBO_A51 is not set
 # CONFIG_DTBO_M21 is not set
 CONFIG_DTBO_M31S=y
@@ -3547,8 +3543,6 @@ CONFIG_HID_PICOLCD=y
 # CONFIG_HID_PICOLCD_LEDS is not set
 # CONFIG_HID_PICOLCD_CIR is not set
 CONFIG_HID_PLANTRONICS=y
-CONFIG_HID_PLAYSTATION=y
-CONFIG_PLAYSTATION_FF=y
 CONFIG_HID_PRIMAX=y
 # CONFIG_HID_RETRODE is not set
 CONFIG_HID_ROCCAT=y
@@ -3766,7 +3760,6 @@ CONFIG_USB_SERIAL_PL2303=y
 # CONFIG_USB_EMI26 is not set
 # CONFIG_USB_ADUTUX is not set
 # CONFIG_USB_SEVSEG is not set
-# CONFIG_USB_RIO500 is not set
 # CONFIG_USB_LEGOTOWER is not set
 # CONFIG_USB_LCD is not set
 # CONFIG_USB_CYPRESS_CY7C63 is not set
@@ -4324,10 +4317,6 @@ CONFIG_SEC_ABC_HUB_BOOTC=y
 # Samsung ABC Hub Booting Time Check eng mode Options
 #
 # CONFIG_SEC_ABC_HUB_BOOTC_ENG is not set
-
-#
-# Samsung LABO Options
-#
 # CONFIG_GOLDFISH is not set
 # CONFIG_CHROME_PLATFORMS is not set
 CONFIG_CLKDEV_LOOKUP=y
@@ -5132,12 +5121,10 @@ CONFIG_VIBRATOR_S2MU106_VOLTAGE_3P3=y
 CONFIG_SENSORS_FINGERPRINT=y
 CONFIG_SENSORS_ET5XX=y
 # CONFIG_SENSORS_ET7XX is not set
+CONFIG_TZIC=y
+CONFIG_TZIC_USE_TZDEV=y
+# CONFIG_TZIC_DEFAULT is not set
 CONFIG_SPU_VERIFY=y
-
-#
-# samsung Performace manager
-#
-# CONFIG_KPERFMON is not set
 
 #
 # Firmware Drivers
@@ -5643,9 +5630,9 @@ CONFIG_HARDENED_USERCOPY=y
 CONFIG_SECURITY_SELINUX=y
 # CONFIG_SECURITY_SELINUX_BOOTPARAM is not set
 # CONFIG_SECURITY_SELINUX_DISABLE is not set
+CONFIG_SECURITY_SELINUX_DEVELOP=y
 # CONFIG_SECURITY_SELINUX_ALWAYS_ENFORCING is not set
 # CONFIG_SECURITY_SELINUX_ALWAYS_PERMISSIVE is not set
-CONFIG_SECURITY_SELINUX_DEVELOP=y
 CONFIG_SECURITY_SELINUX_AVC_STATS=y
 CONFIG_SECURITY_SELINUX_CHECKREQPROT_VALUE=0
 # CONFIG_SECURITY_SMACK is not set
@@ -5664,12 +5651,6 @@ CONFIG_SECURITY_SELINUX_CHECKREQPROT_VALUE=0
 # CONFIG_MST_LPM_DISABLE is not set
 # CONFIG_MST_LPM_CONTROL is not set
 # CONFIG_INTEGRITY is not set
-# CONFIG_INTEGRITY_SIGNATURE is not set
-# CONFIG_INTEGRITY_ASYMMETRIC_KEYS is not set
-# CONFIG_INTEGRITY_AUDIT is not set
-# CONFIG_IMA is not set
-# CONFIG_EVM is not set
-# CONFIG_FIVE is not set
 # CONFIG_GAF is not set
 # CONFIG_SECURITY_DSMS is not set
 CONFIG_DEFAULT_SECURITY_SELINUX=y
@@ -5919,6 +5900,7 @@ CONFIG_TEXTSEARCH_FSM=y
 CONFIG_ASSOCIATIVE_ARRAY=y
 CONFIG_HAS_IOMEM=y
 CONFIG_HAS_DMA=y
+# CONFIG_SGL_ALLOC is not set
 # CONFIG_DMA_NOOP_OPS is not set
 # CONFIG_DMA_VIRT_OPS is not set
 CONFIG_CPU_RMAP=y
@@ -5931,7 +5913,6 @@ CONFIG_CLZ_TAB=y
 # CONFIG_DDR is not set
 # CONFIG_IRQ_POLL is not set
 CONFIG_MPILIB=y
-CONFIG_SIGNATURE=y
 CONFIG_LIBFDT=y
 CONFIG_OID_REGISTRY=y
 # CONFIG_SG_SPLIT is not set
